Update Open Graph and Twitter meta tags

--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
     <meta property="og:title" content="Little Saints - Christian Posters for Children" />
     <meta property="og:description" content="Beautiful collection of 9 Christian-themed posters for children. Inspire faith and joy in your little ones." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://littlesaintart.co.za/" />
+    <meta property="og:image" content="https://littlesaintart.co.za/og-image.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Little Saints - Christian Posters for Children" />
+    <meta name="twitter:description" content="Beautiful collection of 9 Christian-themed posters for children. Inspire faith and joy in your little ones." />
+    <meta name="twitter:image" content="https://littlesaintart.co.za/og-image.jpg" />
   </head>
 
   <body>
